--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/cloudflare": "^12.6.10",
     "@tailwindcss/vite": "^4.1.14",
     "astro": "^5.14.5",
     "tailwindcss": "^4.1.14"
