--- a/package.json
+++ b/package.json
@@ -6,12 +6,18 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "format:check": "prettier --check .",
+    "format:write": "prettier --write ."
   },
   "dependencies": {
     "@astrojs/cloudflare": "^12.6.10",
     "@tailwindcss/vite": "^4.1.14",
     "astro": "^5.14.5",
     "tailwindcss": "^4.1.14"
+  },
+  "devDependencies": {
+    "prettier": "^3.6.2",
+    "prettier-plugin-astro": "^0.14.1"
   }
 }
