--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@astrojs/cloudflare": "^12.6.10",
+    "@astrojs/sitemap": "^3.6.0",
     "@tailwindcss/vite": "^4.1.14",
     "astro": "^5.14.5",
     "tailwindcss": "^4.1.14"
