--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -6,5 +6,6 @@
     "assets": {
         "directory": "./dist",
         "not_found_handling": "404-page" // If you have a custom `src/pages/404.astro` page
-    }
+    },
+    "pages_build_output_dir": "dist"
 }
