--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@lucide/astro": "^0.546.0",
     "@tailwindcss/vite": "^4.1.14",
     "astro": "^5.14.5",
+    "number-to-words": "^1.2.4",
     "tailwindcss": "^4.1.14"
   },
   "devDependencies": {
