feat: generating og images.

--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@lucide/astro": "^0.546.0",
     "@tailwindcss/vite": "^4.1.14",
     "astro": "^5.14.5",
+    "canvas": "^3.2.0",
     "number-to-words": "^1.2.4",
+    "sharp": "^0.34.5",
     "tailwindcss": "^4.1.14"
   },
   "devDependencies": {
