--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "tailwindcss": "^4.1.14"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.19",
     "prettier": "^3.6.2",
     "prettier-plugin-astro": "^0.14.1"
   }
