--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "number-to-words": "^1.2.4",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
+    "resend": "^6.9.2",
     "sharp": "^0.34.5",
     "tailwindcss": "^4.1.14"
   },
