--- a/package.json
+++ b/package.json
@@ -11,27 +11,28 @@
     "format:write": "prettier --write ."
   },
   "dependencies": {
-    "@astrojs/cloudflare": "^12.6.10",
+    "@astrojs/cloudflare": "^12.6.12",
     "@astrojs/mdx": "^4.3.13",
     "@astrojs/react": "^4.4.2",
-    "@astrojs/sitemap": "^3.6.0",
-    "@fontsource-variable/inter": "^5.2.8",
+    "@astrojs/sitemap": "^3.7.0",
+
+
     "@lucide/astro": "^0.546.0",
-    "@tailwindcss/vite": "^4.1.14",
+    "@tailwindcss/vite": "^4.1.18",
     "@types/react": "^19.2.14",
     "@types/react-dom": "^19.2.3",
-    "astro": "^5.14.5",
-    "canvas": "^3.2.0",
+    "astro": "^5.17.2",
+    "canvas": "^3.2.1",
     "number-to-words": "^1.2.4",
-    "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "resend": "^6.9.2",
     "sharp": "^0.34.5",
-    "tailwindcss": "^4.1.14"
+    "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.19",
-    "prettier": "^3.6.2",
-    "prettier-plugin-astro": "^0.14.1"
+    "prettier": "^3.8.1",
+    "prettier-plugin-astro": "^0.14.1",
+    "react": "^19.2.4"
   }
 }
