--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -3,8 +3,12 @@
     "name": "geeta-mini",
     // Update to today's date
     "compatibility_date": "2025-10-17",
+     "compatibility_flags": [
+    "nodejs_compat",
+    "global_fetch_strictly_public"
+  ],
     "assets": {
         "directory": "./dist",
         "not_found_handling": "404-page" // If you have a custom `src/pages/404.astro` page
-    }
+}
 }
