--- a/package.json
+++ b/package.json
@@ -15,12 +15,11 @@
     "@astrojs/mdx": "^4.3.13",
     "@astrojs/react": "^4.4.2",
     "@astrojs/sitemap": "^3.7.0",
-
-
     "@lucide/astro": "^0.546.0",
     "@tailwindcss/vite": "^4.1.18",
     "@types/react": "^19.2.14",
     "@types/react-dom": "^19.2.3",
+    "@zokki/astro-minify": "^1.1.0",
     "astro": "^5.17.2",
     "canvas": "^3.2.1",
     "number-to-words": "^1.2.4",
