--- a/package.json
+++ b/package.json
@@ -27,6 +27,6 @@
     "astro-compressor": "^1.2.0",
     "canvas": "^3.2.1",
     "prettier": "^3.8.1",
-    "prettier-plugin-astro": "^0.14.1",
+    "prettier-plugin-astro": "^0.14.1"
   }
 }
